# libcoap_cpp

./: CMakeLists.txt  CoapClient.cpp  CoapClient.h  CoapCommon.h  CoapServer.cpp  CoapServer.h  Signals.h  main.cpp
res/: large.txt
